<resources>
    <string name="app_name">Hotel Booking App</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">enter email</string>
    <string name="passHint">enter password</string>
    <string name="passConfirm">re-enter password</string>
    <string name="remember">Remember me</string>
    <string name="not_registered">Not a Member? </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SamJay0</string>
    <string name="nav_header_subtitle">samjay0.254@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_budget_hotel">Budget Hotel</string>
    <string name="menu_premium_hotel">Premium Hotel</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_about">About</string>
</resources>
