<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_building"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:layout_marginTop="70dp"
                android:ems="10"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:ems="10"
                android:drawablePadding="12dp"
                android:drawableLeft="@drawable/ic_lock_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/remember"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_background"
                android:text="@string/login"
                android:clickable="true"
                android:focusable="true"
                android:onClick="login"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                />
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/not_registered"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/sign_up_background"
                android:clickable="true"
                android:focusable="true"
                android:onClick="sign_up"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textAllCaps="false"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>