<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    android:background="@drawable/sign_up_gradient"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:padding="16dp"
                android:src="@drawable/ic_building" />

            <!--<EditText-->
                <!--android:id="@+id/sign_up_username"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="70dp"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:drawableLeft="@drawable/ic_account_circle_black_24dp"-->
                <!--android:drawablePadding="12dp"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/username"-->
                <!--android:inputType="textPersonName"-->
                <!--android:padding="8dp"-->
                <!--android:textColorHint="@color/white" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_marginStart="40dp"-->
                <!--android:layout_marginLeft="40dp"-->
                <!--android:background="@color/white" />-->

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_white"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/sign_up_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/passConfirm"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/sign_up_background"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already a Member?  " />

                <TextView
                    android:id="@+id/login_if_member"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Login"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>